--- a/js/package.json
+++ b/js/package.json
@@ -4,7 +4,7 @@
   "description": "Write console logs in any programming language",
   "main": "lib/index.js",
   "scripts": {
-    "test": "node test/test.js"
+    "test": "tap test/*.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,6 @@
   },
   "homepage": "https://github.com/cosasdepuma/polyglot-code#readme",
   "devDependencies": {
-    "assert": "^1.4.1"
+    "tap": "^12.0.1"
   }
 }
